--- a/index.html
+++ b/index.html
@@ -1418,15 +1418,16 @@
       const notes = [];
       for (let i = 0; i < quantized.length; i += 1) {
         const n = quantized[i];
-        const strong = n.v > maxV * 0.5 && i % 5 === 0;
-        const makeHold = strong && Math.random() < 0.28;
+        const strong = n.v > maxV * 0.45;
+        const makeHold = strong && i % 12 === 0;
+        const makeChord = strong && i % 8 === 0;
         if (makeHold) {
           lane = (lane + 1) % laneCount;
-          const durBeats = Math.random() < 0.6 ? 1 : 2;
+          const durBeats = i % 24 === 0 ? 2 : 1;
           notes.push({ t: n.t, end: n.t + beat * durBeats, lane, type: "hold", hit: false, done: false });
           continue;
         }
-        if (strong && Math.random() < 0.5) {
+        if (makeChord) {
           lane = (lane + 1) % laneCount;
           const other = (lane + 2) % laneCount;
           notes.push({ t: n.t, lane, type: "tap" });
@@ -1711,11 +1712,12 @@
         }
         break;
       }
-      for (const n of chart) {
-        if (n.type !== "hold" || !n.hit || n.done) continue;
+      for (let lane = 0; lane < activeHolds.length; lane += 1) {
+        const n = activeHolds[lane];
+        if (!n || n.done) continue;
         if (currentTime - (n.end + offsetSec) > hitWindow) {
           n.done = true;
-          if (activeHolds[n.lane] === n) activeHolds[n.lane] = null;
+          activeHolds[lane] = null;
           combo = 0;
           ui.combo.textContent = "0";
         }
@@ -1975,6 +1977,9 @@
 
       ui.bpm.textContent = String(estimatedBpm);
       ui.notes.textContent = String(chart.length);
+      const holdCount = chart.filter((n) => n.type === "hold").length;
+      const chordCount = Math.max(0, chart.length - new Set(chart.map((n) => `${n.t.toFixed(3)}-${n.lane}`)).size);
+      setStatus(`${t("status_ready", fileName)} (Hold ${holdCount}, Chord ${chordCount})`);
       ui.play.disabled = chart.length === 0;
       ui.pause.disabled = chart.length === 0;
       ui.regen.disabled = chart.length === 0;
